# mcp-server-couchbase

./: .gitignore  README.md  pyproject.toml
src/: couchbase_mcp.py  mcp_config.json  mcp_server.py  tools.py
