[project]
name = "mcp-couchbase"
version = "0.3.0"
description = "Couchbase MCP Server - The Developer Data Platform for Critical Applications in Our AI World"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name="Nithish Raghunandanan", email="devadvocates@couchbase.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

dependencies = [
    "click==8.2.1",
    "couchbase==4.4.0",
    "lark-sqlpp==0.0.1",
    "mcp[cli]==1.6.0",
    "requests==2.32.4"
]

[project.urls]
Homepage = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase"
Documentation = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase#readme"
Issues = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase/issues"
